--- a/application/build.gradle
+++ b/application/build.gradle
@@ -11,6 +11,8 @@ repositories {
 
 dependencies {
     testImplementation platform('org.junit:junit-bom:5.10.0')
+    testImplementation 'org.mockito:mockito-core:5.12.0'
+    testImplementation 'org.mockito:mockito-junit-jupiter:5.12.0'
     testImplementation 'org.junit.jupiter:junit-jupiter'
     implementation project(path: ":domain")
     implementation project(path: ":usecase")
